--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ahan1986/CousinOfAmazon#readme",
   "dependencies": {
     "inquirer": "^5.2.0",
+    "joi": "^13.2.0",
     "mysql": "^2.15.0",
     "nodemon": "^1.17.3"
   }
